update endpoints
