# internal/features/desks/transport/http/get_users_desks.go
@@ -19,9 +19,9 @@ import (
 // @Failure                 400 {object} resp.ErrorResponse "Possible: invalid_user_id, bad_request"
 // @Failure                 401 {object} resp.ErrorResponse "unauthorized"
 // @Failure                 500 {object} resp.ErrorResponse "internal_server_error"
-// @Router                  /desks/my [get]
+// @Router                  /desks [get]
 func (h *DesksHandler) GetUsersDesks(w http.ResponseWriter, r *http.Request) {
-	h.log.Info("new request", slog.String("path", "/desks/my"))
+	h.log.Info("new request", slog.String("path", "/desks"))
 
 	ctx := r.Context()
 	userIdStr, ok := domain.GetUserID(ctx)
